Added potion mixing category